Added credits for 3rd party software in preface
git-svn-id: https://svn.mccode.org/svn/McStasTeX@144 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -33,11 +33,11 @@ community, too numerous to mention here.
 %users to contribute components with manual entries for inclusion in
 %future versions of \MCS.
 
-In case of errors, questions, or suggestions, 
+In case of errors, questions, or suggestions,
 %or other need for support should arise,
 do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
-or consult the \MCS\ WWW home page~\cite{mcstas_webpage}. 
+or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
 A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
@@ -63,6 +63,14 @@ to \MCS\ \version:
 \item{Geza Zsigmond helped a lot in porting his Fermi Chopper component from Vitess \cite{Vitess,vitess_webpage} to \MCS .}
 \end{itemize}
 Thank you guys! This is what \MCS\ is all about!
+
+Third party software included in \MCS\ are:
+\begin{itemize}
+\item perl Math::Amoeba from John A.R. Williams \verb+J.A.R.Williams@aston.ac.uk+.
+\item perl Tk::Codetext from Hans Jeuken \verb+haje@toneel.demon.nl+.
+\item scilab Plotlib from St\'ephane Mottelet \verb+mottelet@utc.fr+.
+\item and optionally PGPLOT from Tim Pearson \verb+tjp@astro.caltech.edu+.
+\end{itemize}
 
 The \MCS\ project has been supported by the European Union, initially
 through the XENNI program and the RTD ``Cool Neutrons'' program in FP4,
