--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -425,3 +425,10 @@
    volume    = {AERE - R 7682}
 }
 
+@article{Sears75,
+   author    = {V.F. Sears},
+   journal   = {Adv. Phys.},
+   pages     = {1},
+   year      = {1975},
+   volume    = {24}
+}
