--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -238,6 +238,9 @@ Details about using these functions are given in the \MCS\ User Manual.
 
 \subsection{Ray-geometry intersections}
 \begin{itemize}
+\item {\bf inside\_rectangle}(\&$x$, \&$y$, $x$, $xw$, $yh$). 
+  Return 1 if $-xw/2 \leq x \leq xw/2$ AND $-yh/2 \leq y \leq yh/2$. 
+  Else return 0.
 \item {\bf box\_intersect}(\&$t_1$, \&$t_2$, $x$, $y$, $z$, $v_x$, $v_y$, $v_z$,
   $d_x$, $d_y$, $d_z$). Calculates the (0, 1, or 2) intersections between
   the neutron path and a box of dimensions $d_x$, $d_y$, and $d_z$,
